<resources>
    <string name="app_name">EventConnect</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo</string>
    <string name="nombreUser">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="register">Registro</string>
    <string name="click_to_login">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="click_to_register">Registrarse</string>
    <string name="logout">Cerrar sesión</string>

    <!--Texto Perfil Usuario-->
    <string name="perfilUsuario">Perfil del usuario</string>
    <string name="listaEventosUsuario">Lista de eventos</string>
    <string name="mapaEventosUsuario">Mapa de eventos</string>

    <!--Texto Perfil Administrador-->
    <string name="perfilAdmin">Perfil de administrador</string>
    <string name="listaUsuariosAdmin">Lista de todos los usuarios</string>
    <string name="todosEventosAdmin">Lista de todos los eventos</string>

    <!--Texto Lista de Usuarios Administrador-->
    <string name="listaUsuarios">Gestión de Usuarios</string>

    <string name="eslogan">Donde los eventos cobran vida</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>


</resources>