<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/usuario"
            android:title="@string/perfilUsuario" />

        <item
            android:id="@+id/nav_lista_eventos"
            android:icon="@drawable/eventos"
            android:title="@string/listaEventosUsuario" />

        <item
            android:id="@+id/nav_mapa_eventos"
            android:icon="@drawable/mapa"
            android:title="@string/mapaEventosUsuario" />


    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
